--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,8 +41,9 @@
     // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
     /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     "paths": {
-      "@lib*": ["./src/lib/*"],
-      "@habitat": ["./src"]
+      "@lib/*": ["./src/lib/*"],
+      "@habitat": ["./src"],
+      "@myTypes/*": ["./src/types/*"]
     },
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
@@ -60,6 +61,6 @@
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
-  "include": ["demo/*", "src/*"]
+  "include": ["./demo/**/*", "./src/**/*"]
   // "exclude": ["tests/*"]
 }
