--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "repository": "https://liao-frank@github.com/liao-frank/habitat.git",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
     "app-root-dir": "^1.0.2",
-    "discord-api-types": "^0.27.3",
+    "discord-api-types": "^0.29.0",
     "discord.js": "^13.6.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/app-root-dir": "^0.1.1",
     "@types/lodash": "^4.14.179",
+    "@types/uuid": "^8.3.4",
     "buffer": "^6.0.3",
     "concurrently": "^7.0.0",
     "events": "^3.3.0",
