--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "app-root-dir": "^1.0.2",
     "discord-api-types": "^0.29.0",
     "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/app-root-dir": "^0.1.1",
     "@types/lodash": "^4.14.179",
     "@types/uuid": "^8.3.4",
@@ -25,6 +27,7 @@
     "nodemon": "^2.0.15",
     "parcel": "^2.3.2",
     "path-browserify": "^1.0.1",
+    "prettier": "^2.6.0",
     "process": "^0.11.10",
     "rimraf": "^3.0.2",
     "stream-browserify": "^3.0.0",
