--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "rimraf": "^3.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "timers-browserify": "^2.0.12"
+    "timers-browserify": "^2.0.12",
+    "typescript": "^4.6.2"
   },
   "scripts": {
-    "demo": "yarn demo-build; concurrently \"nodemon ./build/index.js\" \"npm:demo-watch\"",
+    "demo": "yarn demo-build && concurrently \"nodemon ./build/index.js\" \"npm:demo-watch\"",
     "demo-build": "parcel build ./demo/index.ts --dist-dir ./build",
     "demo-watch": "parcel watch ./demo/index.ts --dist-dir ./build",
     "postinstall": "rimraf .parcel-cache"
